--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -10,12 +11,18 @@ body
 
 #casbecera
 {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0ps rgha(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#casbecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #casbecera #tagline
@@ -27,7 +34,7 @@ body
 #container
 {
     width: 70%;
-    padding: lem;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -36,4 +43,9 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
